using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace S2A27_28_29
{
    public class Professor : IDisposable
    {
        public string Nome { get; set; }
        public void Dispose()
        {

        }
    }
}